nickel-lang-cli/tests/snapshot/inputs/errors/query_non_record.ncl
# capture = 'stderr'
# command = [ 'query', 'value' ]
1
